--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link href="https://v1.fontapi.ir/css/Sahel:400" rel="stylesheet">
 
 
-    <title>React App</title>
+    <title>online Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
